--- a/web/sites/mobile-nextbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
+++ b/web/sites/mobile-nextbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.games_live_dealer.field_external_game_id
     - field.field.node.games_live_dealer.field_game_code_live_dealer
+    - field.field.node.games_live_dealer.field_game_launch_alias
     - field.field.node.games_live_dealer.field_game_platform_live_dealer
     - field.field.node.games_live_dealer.field_game_provider_live_dealer
     - field.field.node.games_live_dealer.field_game_ribbon_live_dealer
@@ -25,16 +26,16 @@ targetEntityType: node
 bundle: games_live_dealer
 mode: default
 content:
-  field_external_game_id:
-    weight: 113
+  field_game_code_live_dealer:
+    weight: 1
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_game_code_live_dealer:
-    weight: 102
+  field_game_launch_alias:
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -42,21 +43,21 @@ content:
     type: string
     region: content
   field_game_platform_live_dealer:
-    weight: 103
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_game_provider_live_dealer:
-    weight: 104
+    weight: 4
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_game_ribbon_live_dealer:
-    weight: 105
+    weight: 5
     label: above
     settings:
       link: true
@@ -64,7 +65,7 @@ content:
     type: entity_reference_label
     region: content
   field_games_subprovider_ld:
-    weight: 106
+    weight: 6
     label: above
     settings:
       link: true
@@ -72,7 +73,7 @@ content:
     type: entity_reference_label
     region: content
   field_lobby_tab_ld:
-    weight: 107
+    weight: 7
     label: above
     settings:
       link: true
@@ -80,7 +81,7 @@ content:
     type: entity_reference_label
     region: content
   field_preview_mode_ld:
-    weight: 108
+    weight: 8
     label: above
     settings:
       format: default
@@ -90,7 +91,7 @@ content:
     type: boolean
     region: content
   field_provider_logo_ld:
-    weight: 109
+    weight: 9
     label: above
     settings:
       image_style: ''
@@ -99,14 +100,14 @@ content:
     type: image
     region: content
   field_target_ld:
-    weight: 110
+    weight: 10
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_thumbnail_image_ld:
-    weight: 111
+    weight: 11
     label: above
     settings:
       image_style: ''
@@ -115,7 +116,7 @@ content:
     type: image
     region: content
   field_use_game_loader_ld:
-    weight: 112
+    weight: 12
     label: above
     settings:
       format: default
@@ -125,7 +126,10 @@ content:
     type: boolean
     region: content
   links:
-    weight: 100
+    weight: 0
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
+  field_external_game_id: true
   langcode: true
