--- a/web/sites/mobile-nextbet/config/sync/webcomposer_config.games_playtech_provider.yml
+++ b/web/sites/mobile-nextbet/config/sync/webcomposer_config.games_playtech_provider.yml
@@ -1,5 +1,8 @@
-javascript_assets: 'https://login.megasportcasino.com/jswrapper/integration.js.php?casino=mannycasino'
-playtech_pas_endpoint: 'https://login.megasportcasino.com/Login.php'
-lobby_url: 'https://www.google-analytics.com/lobby.js'
-playtech_pas_casino: mannycasino
-languages: "sc|zh-cn\r\nch|zh-cn\r\nkr|ko\r\nvn|en\r\njp|en\r\neu|en\r\nid|en\r\nin|en\r\ngr|en\r\npl|en"
+javascript_assets: "https://login.megasportcasino.com/jswrapper/integration.js.php?casino=mannycasino"
+playtech_pas_casino: "mannycasino"
+languages: "en|en\r\nsc|zh-cn\r\nch|zh-cn\r\nkr|ko\r\nvn|en\r\njp|en\r\neu|en\r\nid|en\r\nin|en\r\ngr|en\r\npl|en"
+ugl_switch: 0
+ugl_languages: "en|en\r\nsc|zh-cn\r\nch|zh-cn\r\nkr|ko\r\nvn|en\r\njp|en\r\neu|en\r\nid|en\r\nin|en\r\ngr|en\r\npl|en"
+ugl_currency: "RMB\r\nMYR\r\nUSD\r\nGBP\r\nEUR\r\nKRW\r\nTHB\r\nVND\r\nIDR\r\nINR\r\nRUB\r\nPLN\r\nBRL\r\nMXN\r\nCLP\r\nCOP\r\nPEN\r\nARS\r\nLAK\r\nMMK\r\nKHR"
+ugl_url: "https://login.nxb8.com/GameLauncher"
+ugl_parameters: "language|{language}\r\nplayMode|1\r\nclientPlatform|mobile\r\ncasino|nextbetcasino\r\ngameCodeName|{gameCodeName}\r\nusername|{username}\r\nexternalToken|{externalToken}@{playerId}\r\nlobbyUrl|{domain:mobile}/{domain:mobile_lang}/slots\r\nlaunch_alias|{launch_alias}"
