--- a/web/sites/nextbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_form_display.node.games_live_dealer.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.games_live_dealer.field_game_image_large
     - field.field.node.games_live_dealer.field_game_info_id
     - field.field.node.games_live_dealer.field_game_info_toggle
+    - field.field.node.games_live_dealer.field_game_launch_alias
     - field.field.node.games_live_dealer.field_game_lobby_category
     - field.field.node.games_live_dealer.field_game_preview_mode
     - field.field.node.games_live_dealer.field_game_provider
@@ -101,6 +102,7 @@ third_party_settings:
         - field_game_subprovider
         - field_game_code
         - field_external_game_id
+        - field_game_launch_alias
         - field_game_lobby_category
       parent_name: ''
       weight: 11
@@ -241,8 +243,16 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  field_game_lobby_category:
+  field_game_launch_alias:
     weight: 20
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_game_lobby_category:
+    weight: 21
     settings: {  }
     third_party_settings: {  }
     type: options_select
