--- a/web/sites/nextbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_view_display.node.games_live_dealer.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.games_live_dealer.field_game_image_large
     - field.field.node.games_live_dealer.field_game_info_id
     - field.field.node.games_live_dealer.field_game_info_toggle
+    - field.field.node.games_live_dealer.field_game_launch_alias
     - field.field.node.games_live_dealer.field_game_lobby_category
     - field.field.node.games_live_dealer.field_game_preview_mode
     - field.field.node.games_live_dealer.field_game_provider
@@ -104,6 +105,14 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_game_launch_alias:
+    weight: 103
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_game_lobby_category:
     weight: 17
