--- a/web/sites/entrypage/config/sync/core.extension.yml
+++ b/web/sites/entrypage/config/sync/core.extension.yml
@@ -96,7 +96,7 @@ module:
   webcomposer_language_hierarchy: 0
   webcomposer_mailer: 0
   webcomposer_marketing_script: 0
-  webcomposer_partner: 0
+  webcomposer_partner_responsive: 0
   webcomposer_permission: 0
   webcomposer_promotions: 0
   webcomposer_replicate_utility: 0
