--- a/web/sites/entrypage/config/sync/field.storage.partner_responsive_entity.field_id.yml
+++ b/web/sites/entrypage/config/sync/field.storage.partner_responsive_entity.field_id.yml
@@ -1,12 +1,14 @@
-uuid: ee85fb23-8be0-4b02-8824-f842a2a2e7a8
+uuid: a2d170ab-abc3-4e7f-9ef2-20074599e56c
 langcode: en
 status: true
 dependencies:
   module:
-    - webcomposer_partner
-id: partner_entity.field_id
+    - webcomposer_partner_responsive
+_core:
+  default_config_hash: UC2omrT7WH60PuyazdtZlA_UJm_Bpfg2tiXw8YPNo9c
+id: partner_responsive_entity.field_id
 field_name: field_id
-entity_type: partner_entity
+entity_type: partner_responsive_entity
 type: string
 settings:
   max_length: 255
