--- a/web/sites/nextbet/config/sync/field.field.taxonomy_term.arcade_game_categories.field_arcade_category_icon.yml
+++ b/web/sites/nextbet/config/sync/field.field.taxonomy_term.arcade_game_categories.field_arcade_category_icon.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.taxonomy_term.field_arcade_category_icon
     - taxonomy.vocabulary.arcade_game_categories
   module:
+    - content_translation
     - image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      alt: alt
+      title: title
+      file: '0'
 id: taxonomy_term.arcade_game_categories.field_arcade_category_icon
 field_name: field_arcade_category_icon
 entity_type: taxonomy_term
@@ -14,7 +21,7 @@ bundle: arcade_game_categories
 label: 'Arcade category icon'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
