--- a/web/sites/faqs/config/sync/core.entity_form_display.node.cricket_page.default.yml
+++ b/web/sites/faqs/config/sync/core.entity_form_display.node.cricket_page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.cricket_page.field_body
+    - field.field.node.cricket_page.field_schema_toggle
     - node.type.cricket_page
   module:
     - path
@@ -28,6 +29,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea_with_summary
+    region: content
+  field_schema_toggle:
+    weight: 11
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   langcode:
     type: language_select
@@ -80,6 +88,8 @@ content:
   translation:
     weight: 10
     region: content
+    settings: {  }
+    third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
     weight: 5
