--- a/web/sites/faqs/config/sync/core.entity_view_display.node.cricket_page.default.yml
+++ b/web/sites/faqs/config/sync/core.entity_view_display.node.cricket_page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.cricket_page.field_body
+    - field.field.node.cricket_page.field_schema_toggle
     - node.type.cricket_page
   module:
     - text
@@ -19,6 +20,16 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_schema_toggle:
+    weight: 3
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
     region: content
   langcode:
     type: language
