ATLANTIC-1319 Created custom GCB Seal module

--- a/web/sites/mobile-nextbet/modules/custom/gcb_seal/gcb_seal.info.yml
+++ b/web/sites/mobile-nextbet/modules/custom/gcb_seal/gcb_seal.info.yml
@@ -1,5 +1,5 @@
-name: Mobile Nextbet
+name: GCB Seal
 type: module
-description: Mobile Nextbet configuration
+description: GCB Seal Configuration
 core: 8.x
 package: Web Composer
