--- a/web/sites/nextbet/config/sync/field.field.node.games_live_dealer.field_game_launch_alias.yml
+++ b/web/sites/nextbet/config/sync/field.field.node.games_live_dealer.field_game_launch_alias.yml
@@ -10,7 +10,7 @@ field_name: field_game_launch_alias
 entity_type: node
 bundle: games_live_dealer
 label: 'Game Launch Alias'
-description: "<p>Needed to be able to launch a direct table for Playtech UGL integration, i.e.:</p>\r\n<ul>\r\n<li><strong>rol_aogroulette</strong></li>\r\n<li><strong>cbjl_cashbackbj</strong></li>\r\n<li><strong>blj_blackjack6</strong></li>\r\n<li>etc.</li>\r\n</ul>"
+description: "<p>Used for the direct table launch, especially for providers that don't have the option to use Table ID and External Game ID together.</p>"
 required: false
 translatable: false
 default_value: {  }
