--- a/web/sites/ptplus/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/ptplus/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -31,101 +31,17 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_title
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_unpublish_date
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_user_availability
-    - image.style.thumbnail
   module:
     - color_field
-    - conditional_fields
     - datetime
-    - field_group
     - link
+    - options
     - svg_image
     - text
+    - user
     - webcomposer_slider_v2
-third_party_settings:
-  field_group:
-    group_scheduler_settings:
-      children:
-        - field_publish_date
-        - field_unpublish_date
-      parent_name: ''
-      weight: 5
-      format_type: tab
-      format_settings:
-        label: 'Scheduler Settings'
-        formatter: closed
-        description: ''
-        required_fields: true
-        id: scheduler-settings
-        classes: ''
-      label: 'Scheduler Settings'
-    group_pre_banner_fields:
-      children:
-        - field_banner_image
-        - field_banner_image_landscape
-        - field_banner_link
-        - field_banner_link_target
-        - field_banner_blurb
-        - field_content_position
-      parent_name: ''
-      weight: 3
-      format_type: fieldset
-      format_settings:
-        label: 'Pre Banner Fields'
-        description: ''
-        required_fields: true
-        id: pre-banner-fields
-        classes: ''
-      label: 'Pre Banner Fields'
-    group_post_banner_fields:
-      children:
-        - field_post_banner_image
-        - field_post_banner_image_landscap
-        - field_post_banner_link
-        - field_post_banner_link_target
-        - field_post_banner_blurb
-        - field_post_content_position
-        - field_user_availability
-      parent_name: ''
-      weight: 4
-      format_type: fieldset
-      format_settings:
-        label: 'Post Banner Fields'
-        description: ''
-        required_fields: true
-        id: post-banner-fields
-        classes: ''
-      label: 'Post Banner Fields'
-    group_additional_statuses:
-      children:
-        - field_status
-        - field_disable_in_tablet
-        - field_preview_display_only
-      parent_name: ''
-      weight: 6
-      format_type: fieldset
-      format_settings:
-        label: 'Additional Statuses'
-        description: 'Enable Preview, Tablet View, and the Slider entry statuses'
-        required_fields: true
-        id: additional-statuses
-        classes: ''
-      label: 'Additional Statuses'
-    group_product_ribbon:
-      children:
-        - field_ribbon_background_color
-        - field_ribbon_label_color
-        - field_ribbon_product_label
-      parent_name: ''
-      weight: 8
-      format_type: fieldset
-      format_settings:
-        id: product-ribbon
-        classes: ''
-        description: ''
-        required_fields: true
-      label: 'Product Ribbon'
 _core:
-  default_config_hash: OZJ37uq9NXIxbipYTMrqYIn6yXsVaUWLRX1cLOk0Kl0
+  default_config_hash: lTOa1e37jE2gIy0Alk0YcBDwuKHa3-X2bDXwinqK7S4
 id: webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default
 targetEntityType: webcomposer_slider_v2_entity
 bundle: webcomposer_slider_v2_entity
@@ -133,411 +49,279 @@ mode: default
 content:
   field_banner_blurb:
     weight: 7
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings:
-      conditional_fields:
-        17ffb5f8-163e-4a00-87a2-d7937877cdb0:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: text_textarea
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   field_banner_image:
-    weight: 3
+    weight: 4
+    label: above
     settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings:
-      conditional_fields:
-        8387d396-da52-4cb1-811a-bff598a692f0:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: image_image
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_banner_image_landscape:
-    weight: 4
+    weight: 21
+    label: above
     settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
-    type: image_image
+    type: image
     region: content
   field_banner_link:
     weight: 5
+    label: above
     settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings:
-      conditional_fields:
-        ad17fd21-97a8-46cd-95d7-44c2a7b88317:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: link_default
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
     region: content
   field_banner_link_target:
     weight: 6
+    label: above
     settings: {  }
-    third_party_settings:
-      conditional_fields:
-        09501270-60e3-4bc1-b11c-e519a2f663f6:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: options_select
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_content_position:
     weight: 8
+    label: above
     settings: {  }
-    third_party_settings:
-      conditional_fields:
-        5a9b5435-2202-44c0-9cb2-673b765d574f:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '0'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: options_select
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_disable_in_tablet:
-    weight: 21
+    weight: 17
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_external_game_id:
-    weight: 12
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+    type: string
+    weight: 27
     region: content
-  field_game_launching:
-    weight: 3
-    settings: {  }
+    label: above
+    settings:
+      link_to_entity: false
     third_party_settings: {  }
-    type: options_select
+  field_game_launching:
+    weight: 16
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_log_in_state:
-    weight: 1
+    weight: 3
+    label: above
     settings: {  }
-    third_party_settings:
-      conditional_fields: {  }
-    type: options_buttons
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_post_banner_blurb:
-    weight: 16
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings:
-      conditional_fields:
-        80bb03ca-9b89-4cd5-8b21-99813a81a233:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: text_textarea
+    weight: 15
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   field_post_banner_image:
-    weight: 12
+    weight: 14
+    label: above
     settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
-    third_party_settings:
-      conditional_fields:
-        5ade20cf-cfa4-4f8b-ae2d-0c31c66b4fda:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: image_image
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
     region: content
   field_post_banner_image_landscap:
-    weight: 13
+    weight: 22
+    label: above
     settings:
-      progress_indicator: throbber
-      preview_image_style: thumbnail
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
-    type: image_image
+    type: image
     region: content
   field_post_banner_link:
-    weight: 14
+    weight: 11
+    label: above
     settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings:
-      conditional_fields:
-        e6e2ffa7-2b85-4d65-bcd8-4f201bac2280:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: link_default
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
     region: content
   field_post_banner_link_target:
-    weight: 15
+    weight: 12
+    label: above
     settings: {  }
-    third_party_settings:
-      conditional_fields:
-        7c6ed5f0-867e-4c89-b1f0-333dd1ed9f0d:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: options_select
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_post_content_position:
-    weight: 17
+    weight: 13
+    label: above
     settings: {  }
-    third_party_settings:
-      conditional_fields:
-        11942b8b-0297-4366-a7a1-f23ccd7cd1ea:
-          dependee: field_log_in_state
-          settings:
-            state: visible
-            condition: value
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              -
-                value: '1'
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: webcomposer_slider_v2_entity
-          bundle: webcomposer_slider_v2_entity
-    type: options_select
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_postlogin_slider_ribbon:
     weight: 17
-    settings: {  }
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    type: options_select
+    type: entity_reference_label
     region: content
   field_prelogin_slider_ribbon:
-    weight: 8
-    settings: {  }
+    weight: 18
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    type: options_select
+    type: entity_reference_label
     region: content
   field_preview_display_only:
-    weight: 22
+    weight: 16
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_publish_date:
-    weight: 8
-    settings: {  }
+    weight: 9
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_ribbon_background_color:
-    weight: 13
-    settings: {  }
+    weight: 18
+    label: above
+    settings:
+      format: hex
+      opacity: '1'
     third_party_settings: {  }
-    type: color_field_widget_html5
+    type: color_field_formatter_text
     region: content
   field_ribbon_label_color:
-    weight: 14
-    settings: {  }
+    weight: 20
+    label: above
+    settings:
+      format: hex
+      opacity: '1'
     third_party_settings: {  }
-    type: color_field_widget_html5
+    type: color_field_formatter_text
     region: content
   field_ribbon_product_label:
-    weight: 15
-    settings:
-      size: 60
-      placeholder: ''
+    weight: 23
+    label: above
+    settings: {  }
     third_party_settings: {  }
-    type: text_textfield
+    type: text_default
     region: content
   field_slider_enable_game_launch:
-    weight: 9
+    weight: 25
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_slider_game_code:
-    weight: 11
+    weight: 26
+    label: above
     settings:
-      size: 60
-      placeholder: ''
+      link_to_entity: false
     third_party_settings: {  }
-    type: string_textfield
+    type: string
     region: content
   field_slider_game_provider:
-    weight: 13
+    weight: 28
+    label: above
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: list_default
     region: content
   field_slider_use_game_loader:
-    weight: 10
+    weight: 29
+    label: above
     settings:
-      display_label: true
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
     third_party_settings: {  }
-    type: boolean_checkbox
+    type: boolean
     region: content
   field_status:
-    weight: 20
+    weight: 19
+    label: above
     settings: {  }
     third_party_settings: {  }
-    type: options_select
+    type: list_default
     region: content
   field_title:
-    weight: 0
+    weight: 2
+    label: above
     settings:
-      size: 60
-      placeholder: ''
+      link_to_entity: false
     third_party_settings: {  }
-    type: string_textfield
+    type: string
     region: content
   field_unpublish_date:
-    weight: 9
-    settings: {  }
+    weight: 10
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
     type: datetime_default
     region: content
   field_user_availability:
-    weight: 18
+    weight: 24
+    label: above
     settings: {  }
     third_party_settings: {  }
-    type: options_buttons
+    type: list_default
     region: content
-  langcode:
-    type: language_select
-    weight: 2
+  name:
+    label: above
+    type: string
+    weight: 0
     region: content
     settings:
-      include_locked: true
+      link_to_entity: false
     third_party_settings: {  }
-  translation:
-    weight: 7
+  user_id:
+    label: hidden
+    type: author
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  name: true
-  user_id: true
+  langcode: true
